test/fixtures/type-error/keccak.ro
fun keccak(input: bytes): bytes = {
  bytes
}